--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -1,5 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Dream Wedding</string>
     <string name="show_notification">Show Notification</string>
     <string name="is_notification_enabled">Is Notification Enabled?</string>
 </resources>
